[package]
name = "brokerage-api"
version = "0.1.0"
edition = "2024"
description = "A library for communicating with various brokerage APIs, in order to fetch real-time and historical equity data."
license = "MIT"
repository = "https://github.com/SeanTolino/brokerage-api"
keywords = ["brokerage", "api", "finance", "stocks", "futures", "options", "equities", "algotrading"]
categories = ["finance"]

[dependencies]
reqwest = { version = "0.12.23", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
base64 = "0.22.1"
json = "0.12.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
anyhow = "1.0.99"
async-std = "1.13.2"
